@@ -361,11 +361,13 @@ void Barge_object::add_dirty
 	gwin->get_shape_location(this, x, y);
 	int w = xtiles*c_tilesize, h = ytiles*c_tilesize;
 	Rectangle box(x - w, y - h, w, h);
-	box.enlarge(10);		// Make it a bit bigger.
+	const int barge_enlarge = (c_tilesize+c_tilesize/4);
+	const int barge_stretch = (4*c_tilesize+c_tilesize/2);
+	box.enlarge(barge_enlarge);		// Make it a bit bigger.
 	if (dir%2)			// Horizontal?  Stretch.
-		{ box.x -= 18; box.w += 36; }
+		{ box.x -= barge_enlarge/2; box.w += barge_stretch; }
 	else
-		{ box.y -= 18; box.h += 36; }
+		{ box.y -= barge_enlarge/2; box.h += barge_stretch; }
 	box = gwin->clip_to_win(box);	// Intersect with screen.
 	gwin->add_dirty(box);
 	}
